fixed company text hidden by overflow

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -37,11 +37,11 @@
 
 @media (min-width: $fullhd) {
     .sidebar {
-        width: 15%;
+        width: 20%;
     }
 
     .pad {
-        padding-left: 15%;
+        padding-left: 20%;
     }
 }
 
